fix evidence add form

--- a/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
+++ b/client/src/app/views/evidence/evidence-detail/evidence-summary/evidence-summary.page.html
@@ -128,16 +128,16 @@
         <nz-descriptions nzLayout="vertical"
           nzSize="small"
           nzBordered="true"
-          [nzColumn]="(evidence.disease.name !== undefined && evidence.phenotypes.length > 0) ? 1 : 2" *nzSpaceItem>
+          [nzColumn]="(evidence.disease?.name !== undefined && evidence.phenotypes.length > 0) ? 1 : 2" *nzSpaceItem>
 
           <!-- disease -->
           <nz-descriptions-item nzTitle="Disease">
-            <ng-container *ngIf="evidence.disease.name">
+            <ng-container *ngIf="evidence.disease">
               <a routerLink="/diseases/{{evidence.disease.id}}">
                 <cvc-disease-tag [disease]="evidence.disease"></cvc-disease-tag>
               </a>
             </ng-container>
-            <span *ngIf="!evidence.disease.name"
+            <span *ngIf="!evidence.disease"
               nz-typography
               nzType="secondary">N/A</span>
           </nz-descriptions-item>
