--- a/client/src/app/views/assertions/assertions-detail/assertions-revisions/assertions-revisions.page.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-revisions/assertions-revisions.page.html
@@ -1,1 +1,1 @@
-<p>assertions-revisions works!</p>
+<cvc-revisions-list-and-filter [id]="this.aid" [entityType]="this.entityType"></cvc-revisions-list-and-filter>
