--- a/client/src/app/views/variant-groups/variant-groups-revisions/variant-groups-revisions.component.html
+++ b/client/src/app/views/variant-groups/variant-groups-revisions/variant-groups-revisions.component.html
@@ -1,115 +1,1 @@
-<nz-row [nzGutter]="16">
-  <nz-col nzSpan="18">
-    <ng-container *ngIf="service.revisions$ | ngrxPush as revisions">
-      <nz-card nzTitle="Revisions"
-        class="card-list">
-        <nz-list [nzDataSource]="revisions"
-          class="revision-list"
-          [nzRenderItem]="revision">
-          <ng-template #revision
-            let-revision>
-            <nz-list-item>
-              <!-- Revision Card -->
-              <nz-card nzType="inner"
-                nzSize="small"
-                style="width: 100%"
-                [nzTitle]="revCardHeaderTitle"
-                [nzExtra]="revCardHeaderExtra">
-
-                <ng-container [ngSwitch]="revision.node.fieldName">
-                  <ng-container *ngSwitchCase="'source_ids'">
-                    <ng-container *ngTemplateOutlet="revDiffSourceIds"></ng-container>
-                  </ng-container>
-                  <ng-container *ngSwitchCase="'description'">
-                    <ng-container *ngTemplateOutlet="revDiffDescription"></ng-container>
-                  </ng-container>
-                </ng-container>
-                <nz-card-meta [nzDescription]="moderationButtons">
-                </nz-card-meta>
-                <ng-template #moderationButtons>
-                  <div nz-row
-                    style="margin-top: 1em;">
-                    <div nz-col
-                      nzSpan="24"
-                      style="text-align: right;">
-                      <nz-space nzDirection="horizontal">
-                        <cvc-org-selector-btn-group [(selectedOrg)]="mostRecentOrg" *nzSpaceItem>
-                          <button type="submit"
-                            nz-button
-                            cvcOrgSelectorBtn
-                            nzType="primary"
-                            nzSize="small">
-                            Reject Revision
-                          </button>
-                        </cvc-org-selector-btn-group>
-                        <cvc-org-selector-btn-group [(selectedOrg)]="mostRecentOrg" *nzSpaceItem>
-                          <button type="submit"
-                            nz-button
-                            cvcOrgSelectorBtn
-                            nzType="primary"
-                            nzSize="small">
-                            Accept Revision
-                          </button>
-                        </cvc-org-selector-btn-group>
-
-                      </nz-space>
-
-                    </div>
-                  </div>
-                </ng-template>
-              </nz-card>
-
-              <!-- Revision Card Templates -->
-              <!-- header title -->
-              <ng-template #revCardHeaderTitle>
-                <i nz-icon
-                  nzType="civic:revision"></i> RID{{ revision.node.id }}
-                <span>{{ revision.node.linkoutData.name }} Updated</span>
-              </ng-template>
-              <!-- header secondary & status -->
-              <ng-template #revCardHeaderExtra>
-                <nz-space nzSize="small">
-                  <span nz-typography *nzSpaceItem
-                    nzType="secondary">{{ revision.node.createdAt | timeago }}</span>
-                  <nz-tag *nzSpaceItem>{{ revision.node.status }}</nz-tag>
-                </nz-space>
-              </ng-template>
-            </nz-list-item>
-
-            <!-- Field Diff Templates -->
-            <!-- description -->
-            <ng-template #revDiffDescription>
-              <p><strong>TODO: </strong>create cvc-variant-group-description-revision component to display here</p>
-              <!-- <cvc-gene-description-revision [revision]="revision.node">
-                   </cvc-gene-description-revision> -->
-            </ng-template>
-            <!-- sources -->
-            <ng-template #revDiffSourceIds>
-              <p><strong>TODO: </strong>create cvc-variant-group-sources-revision component to display here</p>
-              <!-- <cvc-gene-sources-revision [revision]="revision.node">
-                   </cvc-gene-sources-revision> -->
-            </ng-template>
-
-          </ng-template>
-        </nz-list>
-      </nz-card>
-    </ng-container>
-  </nz-col>
-  <nz-col nzSpan="6">
-    <cvc-participant-list listTitle="Revisors" [participantList]="service.uniqueRevisors$ | ngrxPush" (participantSelectedEvent)="onRevisorSelected($event)">
-      <ng-template #itemTemplate let-user>
-        <nz-avatar *ngIf="user.profileImagePath; else noAvatar" nz-comment-avatar [nzSrc]="user.profileImagePath">
-        </nz-avatar>
-        <ng-template #noAvatar>
-          <nz-avatar nz-comment-avatar [nzText]="user.username.charAt(0) | uppercase"></nz-avatar>
-        </ng-template>
-        <span>{{user.username}}</span>
-      </ng-template>
-    </cvc-participant-list>
-    <cvc-participant-list listTitle="Fields Revised" [participantList]="service.revisionFields$ | ngrxPush" (participantSelectedEvent)="onFieldNameSelected($event)">
-      <ng-template #itemTemplate let-field>
-        <span>{{field.displayName}}</span>
-      </ng-template>
-    </cvc-participant-list>
-  </nz-col>
-</nz-row>
+<cvc-revisions-list-and-filter [id]="this.vgId" [entityType]="this.entityType"></cvc-revisions-list-and-filter>
