--- a/client/src/app/views/variant-groups/variant-groups-comments/variant-groups-comments.component.html
+++ b/client/src/app/views/variant-groups/variant-groups-comments/variant-groups-comments.component.html
@@ -1,1 +1,1 @@
-<cvc-comment-list [commentable]="commentable"></cvc-comment-list>
+<cvc-comment-list *ngIf="commentable" [commentable]="commentable"></cvc-comment-list>
