--- a/client/src/app/views/variant-groups/variant-groups-flags/variant-groups-flags.component.html
+++ b/client/src/app/views/variant-groups/variant-groups-flags/variant-groups-flags.component.html
@@ -1,1 +1,1 @@
-<cvc-flag-list-and-filter [flaggable]="flaggable"></cvc-flag-list-and-filter>
+<cvc-flag-list-and-filter *ngIf="flaggable" [flaggable]="flaggable"></cvc-flag-list-and-filter>
