--- a/client/src/app/forms/assertion-submit/assertion-submit.form.html
+++ b/client/src/app/forms/assertion-submit/assertion-submit.form.html
@@ -1,1 +1,33 @@
-<p>assertion-submit works!</p>
+<nz-spin nzTip="Submitting" [nzSpinning]="this.loading">
+  <form nz-form
+    [formGroup]="formGroup"
+    (ngSubmit)="submitAssertion(formModel)"
+    nzLayout="vertical">
+    <ng-container *ngTemplateOutlet="formMessages"></ng-container>
+
+    <formly-form [form]="formGroup"
+      [fields]="formFields"
+      [model]="formModel"
+      [options]="formOptions"
+      (modelChange)="formModel = $event"></formly-form>
+
+    <ng-container *ngTemplateOutlet="formMessages"></ng-container>
+  </form>
+
+  <ng-template #formMessages>
+    <nz-form-item *ngIf="this.errorMessages.length > 0">
+      <cvc-form-errors-alert [errors]="this.errorMessages">
+      </cvc-form-errors-alert>
+    </nz-form-item>
+    <ng-container *ngIf="this.success">
+      <nz-alert nzType="success"
+        nzMessage="Evidence Submitted"
+        [nzDescription]="successMessage"
+        nzShowIcon></nz-alert>
+      <ng-template #successMessage
+        nzSize="small">
+        <p>View <a routerLink="/evidence/{{this.newId}}/summary">its details</a>.</p>
+      </ng-template>
+    </ng-container>
+  </ng-template>
+</nz-spin>
