--- a/client/src/app/components/variants/variant-tag/variant-tag.component.html
+++ b/client/src/app/components/variants/variant-tag/variant-tag.component.html
@@ -7,9 +7,10 @@
 <ng-template #tag>
   <nz-tag *ngIf="enablePopover; else noPopover"
     nz-popover
-    [nzPopoverMouseEnterDelay]="0.5"
+    [nzPopoverMouseEnterDelay]="this.onCloseClicked ? 0 : 0.5"
     [nzPopoverContent]="popoverContent"
-    nzPopoverTrigger="hover">
+    nzPopoverTrigger="hover"
+    [nzMode]="this.onCloseClicked ? 'closeable' : 'default'" (nzOnClose)="itemClosed($event)">
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
   <ng-template #popoverContent>
@@ -18,7 +19,7 @@
 </ng-template>
 
 <ng-template #noPopover>
-  <nz-tag>
+  <nz-tag [nzMode]="this.onCloseClicked ? 'closeable' : 'default'" (nzOnClose)="itemClosed($event)">
     <ng-template [ngTemplateOutlet]="tagContent"></ng-template>
   </nz-tag>
 </ng-template>
