fda regulatory checkbox logic working

--- a/client/src/app/forms/config/types/nccn-guideline-input/nccn-guideline-input.type.html
+++ b/client/src/app/forms/config/types/nccn-guideline-input/nccn-guideline-input.type.html
@@ -12,7 +12,7 @@
       <nz-option *ngFor="let opt of guidelines"
         nzCustomContent
         [nzLabel]="opt.name"
-        [nzValue]="opt.id">
+        [nzValue]="opt">
         <nz-space>
           <span *nzSpaceItem>
             {{ opt.name }}
