--- a/client/src/app/views/assertions/assertions-detail/assertions-summary/assertions-summary.page.html
+++ b/client/src/app/views/assertions/assertions-detail/assertions-summary/assertions-summary.page.html
@@ -243,7 +243,7 @@
 
           <!-- NCCN guideline -->
           <nz-descriptions-item nzTitle="NCCN Guideline" nzSpan="2">
-            <ng-container *ngIf="assertion.nccnGuideline">{{ assertion.nccnGuideline }} ({{ assertion.nccnGuidelineVersion}})</ng-container>
+            <ng-container *ngIf="assertion.nccnGuideline">{{ assertion.nccnGuideline.name }} ({{ assertion.nccnGuidelineVersion}})</ng-container>
             <ng-container *ngIf="!assertion.nccnGuideline">
               <span nz-typography
                 nzType="secondary">None Provided</span>
