updated components compile w/ ngx-formly 6.0.0-next.v7

--- a/client/src/app/forms/config/types/rating-input/rating-input.type.html
+++ b/client/src/app/forms/config/types/rating-input/rating-input.type.html
@@ -1,2 +1,6 @@
-<input type="hidden" [formControl]="formControl" [formlyAttributes]="field">
-<nz-rate [ngModel]="formControl.value" (ngModelChange)="updateField($event)" [formlyAttributes]="field"></nz-rate>
+<input type="hidden"
+  [formControl]="formControl"
+  [formlyAttributes]="field">
+<nz-rate [ngModel]="formControl.value"
+  (ngModelChange)="updateField($event)"
+  [formlyAttributes]="field"></nz-rate>
