--- a/client/src/app/forms/config/wrappers/field-tag/field-tag.wrapper.html
+++ b/client/src/app/forms/config/wrappers/field-tag/field-tag.wrapper.html
@@ -1,24 +1,13 @@
-<!-- <span *ngIf="formControl?.value; else showField"> -->
-<span [ngClass]="{ 'hidden': formControl?.value === null }">
-  <nz-tag>{{ to.label }} {{ formControl!.value === null }}</nz-tag>
-</span>
-<span [ngClass]="{ 'hidden': formControl?.value !== null }">
-   <ng-container #fieldComponent></ng-container>
+<!-- display entity tag if linkableType set -->
+<span [ngClass]="{ 'hidden': !linkableType }">
+  <!-- <nz-tag>{{ to.entityType }} {{ linkableType?.id }}</nz-tag> -->
+    <ng-container *ngIf="linkableType" [ngSwitch]="to.entityType">
+      <cvc-gene-tag *ngSwitchCase="'Gene'" [gene]="linkableType"></cvc-gene-tag>
+      <nz-tag *ngSwitchDefault>{{ to.entityType }} {{ linkableType?.id }}</nz-tag>
+    </ng-container>
 </span>
 
-<!-- <nz-form-item>
-     <ng-container *ngIf="to.label && to.hideLabel !== true">
-     <nz-form-label [nzRequired]="to.required && to.hideRequiredMarker !== true"
-     [nzFor]="id">
-     {{ to.label }}
-     </nz-form-label>
-     </ng-container>
-     <nz-form-control [nzValidateStatus]="errorState"
-     [nzErrorTip]="errorTpl">
-     <ng-container #fieldComponent></ng-container>
-     <ng-template #errorTpl
-     let-control>
-     <formly-validation-message [field]="field"></formly-validation-message>
-     </ng-template>
-     </nz-form-control>
-     </nz-form-item> -->
+<!-- display field component if linkableType unset -->
+<span [ngClass]="{ 'hidden': linkableType }">
+  <ng-container #fieldComponent></ng-container>
+</span>
