working on field-list type

--- a/client/src/app/forms/config/wrappers/field-tag/field-tag.wrapper.html
+++ b/client/src/app/forms/config/wrappers/field-tag/field-tag.wrapper.html
@@ -3,15 +3,16 @@
   <!-- <nz-tag>{{ to.entityType }} {{ linkableType?.id }}</nz-tag> -->
     <ng-container *ngIf="linkableType" [ngSwitch]="to.entityType">
       <cvc-gene-tag *ngSwitchCase="'Gene'" [gene]="linkableType" [onCloseClicked]="closeTag"></cvc-gene-tag>
-      <cvc-variant-tag *ngSwitchCase="'Variant'" [variant]="linkableType"></cvc-variant-tag>
-      <cvc-evidence-tag *ngSwitchCase="'Evidence'" [evidence]="linkableType"></cvc-evidence-tag>
-      <cvc-evidence-tag *ngSwitchCase="'Evidence'" [evidence]="linkableType"></cvc-evidence-tag>
-      <cvc-variant-type-tag *ngSwitchCase="'Variant'" [variantType]="linkableType"></cvc-variant-type-tag>
+      <cvc-variant-tag *ngSwitchCase="'Variant'" [variant]="linkableType" [onCloseClicked]="closeTag"></cvc-variant-tag>
+      <cvc-evidence-tag *ngSwitchCase="'Evidence'" [evidence]="linkableType" [onCloseClicked]="closeTag"></cvc-evidence-tag>
+      <cvc-evidence-tag *ngSwitchCase="'Evidence'" [evidence]="linkableType" [onCloseClicked]="closeTag"></cvc-evidence-tag>
+      <cvc-variant-type-tag *ngSwitchCase="'Variant'" [variantType]="linkableType" [onCloseClicked]="closeTag"></cvc-variant-type-tag>
       <nz-tag *ngSwitchDefault>{{ to.entityType }} {{ linkableType?.id }}</nz-tag>
     </ng-container>
 </span>
 
 <!-- display field component if linkableType unset -->
-<span [ngClass]="{ 'hidden': linkableType }">
+<!-- <span [ngClass]="{ 'hidden': linkableType }"> -->
+<span >
   <ng-container #fieldComponent></ng-container>
 </span>
