created form-container card w/o the form-info sidebar

--- a/client/src/app/forms/evidence-submit/evidence-submit.form.html
+++ b/client/src/app/forms/evidence-submit/evidence-submit.form.html
@@ -1,5 +1,5 @@
 <nz-row>
-  <nz-col>
+  <nz-col nzSpan="24">
     <nz-spin nzTip="Submitting"
       [nzSpinning]="this.loading">
       <form nz-form
