--- a/client/src/app/forms/config/wrappers/field-tag/field-tag.wrapper.html
+++ b/client/src/app/forms/config/wrappers/field-tag/field-tag.wrapper.html
@@ -1,20 +1,46 @@
 <!-- display entity tag if linkableType set -->
 <span [ngClass]="{ 'hidden': !linkableType }">
     <ng-container *ngIf="linkableType" [ngSwitch]="to.entityType">
-      <cvc-gene-tag *ngSwitchCase="'Gene'" [gene]="linkableType" [onCloseClicked]="closeTag"></cvc-gene-tag>
-      <cvc-variant-tag *ngSwitchCase="'Variant'" [variant]="linkableType" [onCloseClicked]="closeTag"></cvc-variant-tag>
-      <cvc-evidence-tag *ngSwitchCase="'Evidence'" [evidence]="linkableType" [onCloseClicked]="closeTag"></cvc-evidence-tag>
-      <cvc-evidence-tag *ngSwitchCase="'Evidence'" [evidence]="linkableType" [onCloseClicked]="closeTag"></cvc-evidence-tag>
-      <cvc-variant-type-tag *ngSwitchCase="'Variant'" [variantType]="linkableType" [onCloseClicked]="closeTag"></cvc-variant-type-tag>
 
-      <!-- TODO: get LinkableSource type working with the
-           others so actual tag can be used here -->
+      <cvc-gene-tag *ngSwitchCase="'Gene'"
+        [gene]="linkableType"
+        [onCloseClicked]="closeTag">
+      </cvc-gene-tag>
+
+      <cvc-variant-tag *ngSwitchCase="'Variant'"
+        [variant]="linkableType"
+        [onCloseClicked]="closeTag">
+      </cvc-variant-tag>
+
+      <cvc-evidence-tag *ngSwitchCase="'Evidence'"
+        [evidence]="linkableType"
+        [onCloseClicked]="closeTag">
+      </cvc-evidence-tag>
+
+      <cvc-variant-type-tag *ngSwitchCase="'Variant'"
+        [variantType]="linkableType"
+        [onCloseClicked]="closeTag">
+      </cvc-variant-type-tag>
+
+      <!-- TODO: get LinkableSource & Stub types working with the others so actual tag can be used here -->
       <nz-tag *ngSwitchCase="'Source'"
         nzMode="closeable"
         (nzOnClose)="closeTag(0)">
          {{ linkableType.name }}
       </nz-tag>
-      <nz-tag *ngSwitchDefault>{{ to.entityType }} {{ linkableType?.id }}</nz-tag>
+
+      <nz-tag *ngSwitchCase="'SourceStub'"
+        nzMode="closeable"
+        (nzOnClose)="closeTag(0)">
+        {{ to.entityType }} {{ linkableType?.id }}
+      </nz-tag>
+
+      <nz-tag *ngSwitchDefault
+        nzMode="closeable"
+        (nzOnClose)="closeTag(0)">
+        {{ to.entityType }} {{ linkableType?.id }}
+      </nz-tag>
+
     </ng-container>
 </span>
 
