--- a/client/src/app/forms/evidence-submit/evidence-submit.form.html
+++ b/client/src/app/forms/evidence-submit/evidence-submit.form.html
@@ -43,9 +43,9 @@
     <ngx-json-viewer *ngIf="formModel"
       [json]="formModel"></ngx-json-viewer>
   </div>
-  <div nz-col
-    nzSpan="12">
-    <ngx-json-viewer *ngIf="formGroup"
-      [json]="formGroup.value"></ngx-json-viewer>
-  </div>
+  <!-- <div nz-col
+       nzSpan="12">
+       <ngx-json-viewer *ngIf="formGroup"
+       [json]="formFields"></ngx-json-viewer>
+       </div> -->
 </div>
