refactored variant-input -> variant-select

--- a/client/src/app/forms/config/wrappers/field-tag/field-tag.wrapper.html
+++ b/client/src/app/forms/config/wrappers/field-tag/field-tag.wrapper.html
@@ -17,7 +17,7 @@
         [onCloseClicked]="closeTag">
       </cvc-evidence-tag>
 
-      <cvc-variant-type-tag *ngSwitchCase="'Variant'"
+      <cvc-variant-type-tag *ngSwitchCase="'VariantType'"
         [variantType]="linkableType"
         [onCloseClicked]="closeTag">
       </cvc-variant-type-tag>
