--- a/client/src/app/forms/config/types/variant-select/variant-select.type.html
+++ b/client/src/app/forms/config/types/variant-select/variant-select.type.html
@@ -3,34 +3,28 @@
   [formControl]="formControl"
   [formlyAttributes]="field"
   [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
-  [nzNotFoundContent]="notFound"
+  [nzNotFoundContent]="variantLoader"
   [nzShowArrow]="false"
   (nzOnSearch)="to.onSearch($event)">
-  <ng-container *ngrxLet="this.genes$ as genes">
-    <nz-option *ngFor="let opt of genes"
+  <ng-container *ngrxLet="this.variants$ as variants">
+    <nz-option *ngFor="let opt of variants"
       nzCustomContent
-      [nzValue]="opt.gene">
-      {{ opt.label }}
-      <ng-container *ngIf="opt.gene.geneAliases.length > 0">
-        <span nz-typography
-          nzType="secondary">
-          Aliases: {{ opt.gene.geneAliases.join(', ') }}
-        </span>
-      </ng-container>
+      [nzValue]="opt.variant">
+      {{ opt.label}}
     </nz-option>
   </ng-container>
 </nz-select>
-<ng-template #notFound>
+<ng-template #variantLoader>
   <!-- prompt user to enter search string if none entered, or it is of insufficient length -->
   <ng-container [ngSwitch]="to.searchLength >= 0 && to.searchLength >= to.minSearchLength">
     <div *ngSwitchCase="false"
       class="ant-form-item-explain">
-      Enter an ENTREZ gene ID to search CIViC Genes.
+      Enter a Variant name to search CIViC Variant.
     </div>
     <!-- if valid search, but no results returned, show notice -->
-    <div *ngSwitchCase="true" class="ant-form-item-explain">
-      No Gene found in CIViC that matches {{ to.searchString }}
+    <div *ngSwitchCase="true"
+      class="ant-form-item-explain">
+      No Variant found in CIViC that matches {{ to.searchString }}
     </div>
   </ng-container>
-
 </ng-template>
