--- a/client/src/app/forms/config/wrappers/field-tag/field-tag.wrapper.html
+++ b/client/src/app/forms/config/wrappers/field-tag/field-tag.wrapper.html
@@ -22,6 +22,11 @@
         [onCloseClicked]="closeTag">
       </cvc-variant-type-tag>
 
+      <cvc-disease-tag *ngSwitchCase="'Disease'"
+        [disease]="linkableType"
+        [onCloseClicked]="closeTag">
+      </cvc-disease-tag>
+
       <!-- TODO: get LinkableSource & Stub types working with the others so actual tag can be used here -->
       <nz-tag *ngSwitchCase="'Source'"
         nzMode="closeable"
