field-tag wrapper now handles phenotype tags

--- a/client/src/app/forms/config/wrappers/field-tag/field-tag.wrapper.html
+++ b/client/src/app/forms/config/wrappers/field-tag/field-tag.wrapper.html
@@ -32,6 +32,11 @@
         [onCloseClicked]="closeTag">
       </cvc-drug-tag>
 
+      <cvc-phenotype-tag *ngSwitchCase="'Phenotype'"
+        [phenotype]="linkableType"
+        [onCloseClicked]="closeTag">
+      </cvc-phenotype-tag>
+
       <!-- TODO: get LinkableSource & Stub types working with the others so actual tag can be used here -->
       <nz-tag *ngSwitchCase="'Source'"
         nzMode="closeable"
