--- a/client/src/app/forms/config/types/variant-select/variant-select.type.html
+++ b/client/src/app/forms/config/types/variant-select/variant-select.type.html
@@ -1,30 +1,38 @@
-<nz-select nzShowSearch
-  nzServerSearch
-  [formControl]="formControl"
-  [formlyAttributes]="field"
-  [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
-  [nzNotFoundContent]="variantLoader"
-  [nzShowArrow]="false"
-  (nzOnSearch)="to.onSearch($event)">
-  <ng-container *ngrxLet="this.variants$ as variants">
-    <nz-option *ngFor="let opt of variants"
-      nzCustomContent
-      [nzValue]="opt.variant">
-      {{ opt.label}}
-    </nz-option>
+<ng-container *ngIf="!this.field.formControl?.value">
+  <nz-select nzShowSearch
+    nzServerSearch
+    [formControl]="formControl"
+    [formlyAttributes]="field"
+    [nzPlaceHolder]="!to.placeholder ? null : to.placeholder"
+    [nzNotFoundContent]="variantLoader"
+    [nzDropdownRender]="addVariantTmpl"
+    [nzShowArrow]="false"
+    (nzOnSearch)="to.onSearch($event)">
+    <ng-container *ngrxLet="this.variants$ as variants">
+      <nz-option *ngFor="let opt of variants"
+        nzCustomContent
+        [nzValue]="opt.variant">
+        {{ opt.label}}
+      </nz-option>
+    </ng-container>
+  </nz-select>
+
+  <ng-template #addVariantTmpl>
+    <ng-container *ngIf="this.displayAdd && this.to.searchString !== ''">
+        <cvc-form-errors-alert *ngIf="this.errorMessages.length > 0" [errors]="errorMessages"> </cvc-form-errors-alert>
+        <button *ngIf="this.errorMessages.length == 0" nz-button nzSize="small" [nzLoading]="this.loading" (click)="addVariant(to.searchString)">
+          <i nz-icon nzType="plus" nzTheme="outline"></i>No Existing CIViC Variant&nbsp;<strong>{{ to.searchString }}</strong>&nbsp;found. Create A New Variant?
+        </button>
+    </ng-container>
+  </ng-template>
+
+  <ng-template #variantLoader>
+    <!-- prompt user to enter search string if none entered, or it is of insufficient length -->
+    <ng-container [ngSwitch]="to.searchLength >= 0 && to.searchLength >= to.minLengthSearch">
+      <div *ngSwitchCase="false"
+        class="ant-form-item-explain">
+        Enter a Variant name to search CIViC Variant.
+      </div>
+    </ng-container>
+  </ng-template>
   </ng-container>
-</nz-select>
-<ng-template #variantLoader>
-  <!-- prompt user to enter search string if none entered, or it is of insufficient length -->
-  <ng-container [ngSwitch]="to.searchLength >= 0 && to.searchLength >= to.minSearchLength">
-    <div *ngSwitchCase="false"
-      class="ant-form-item-explain">
-      Enter a Variant name to search CIViC Variant.
-    </div>
-    <!-- if valid search, but no results returned, show notice -->
-    <div *ngSwitchCase="true"
-      class="ant-form-item-explain">
-      No Variant found in CIViC that matches {{ to.searchString }}
-    </div>
-  </ng-container>
-</ng-template>
