copied over some work from the refactor-source-array branch

--- a/client/src/app/forms/config/types/source-input/source-input.type.html
+++ b/client/src/app/forms/config/types/source-input/source-input.type.html
@@ -2,5 +2,5 @@
   <cvc-source-selector (sourceSelected)="onSourceSelected($event)"></cvc-source-selector>
 </ng-container>
 <ng-template #sourceListItem>
-  <cvc-source-tag [source]="formControl.value" [onCloseClicked]="this.closeCallback"></cvc-source-tag>
+  <cvc-source-tag [source]="formControl.value"></cvc-source-tag>
 </ng-template>
