--- a/client/src/app/forms/config/types/variant-input/variant-input.type.html
+++ b/client/src/app/forms/config/types/variant-input/variant-input.type.html
@@ -23,11 +23,13 @@
 </ng-template>
 
 <ng-template #addVariantTmpl>
-  <ng-container *ngIf="this.displayAdd && this.to.searchString !== ''">
-      <cvc-form-errors-alert *ngIf="this.errorMessages.length > 0" [errors]="errorMessages"> </cvc-form-errors-alert>
-      <button *ngIf="this.errorMessages.length == 0" nz-button nzSize="small" [nzLoading]="this.loading" (click)="addVariant(to.searchString)">
-        <i nz-icon nzType="plus" nzTheme="outline"></i>No Existing CIViC Variant&nbsp;<strong>{{ to.searchString }}</strong>&nbsp;found. Create A New Variant?
-      </button>
+  <ng-container *ngIf="this.displayAdd$ | ngrxPush">
+    <ng-container *ngIf="this.to.searchString !== ''">
+        <cvc-form-errors-alert *ngIf="this.errorMessages.length > 0" [errors]="errorMessages"> </cvc-form-errors-alert>
+        <button *ngIf="this.errorMessages.length == 0" nz-button nzSize="small" [nzLoading]="this.loading" (click)="addVariant(to.searchString)">
+          <i nz-icon nzType="plus" nzTheme="outline"></i>No Existing CIViC Variant&nbsp;<strong>{{ to.searchString }}</strong>&nbsp;found. Create A New Variant?
+        </button>
+    </ng-container>
   </ng-container>
 </ng-template>
 
